--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  shared_preferences: ^2.2.2
+  cloud_firestore: ^4.11.0
+  uuid: ^4.1.0
+  firebase_storage:
+  image_picker:
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
