--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,3 +3,7 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-all.zip
+
+
+#keytool -list -v -keystore C:/Users/admin/.android/debug.keystore -alias androiddebugkey -storepass android -keypass android
+
