--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage:
   image_picker:
   google_fonts: ^6.1.0
+  curved_navigation_bar: ^1.0.3
   carousel_slider: ^4.2.1
 
 dev_dependencies:
