--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_fonts: ^6.1.0
   curved_navigation_bar: ^1.0.3
   carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
+  dropdown_button3: ^3.0.0
 
 dev_dependencies:
   flutter_test:
